--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs-extra": "^8.1.0"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3"
   }
 }
